# solana-learning

./: .gitignore  result.logs  solana_cmd.md
advanced-math/: README.md  package-lock.json  package.json  result.md
advanced-math/scripts/: cicd.sh
advanced-math/src/calculator/: Cargo.toml
advanced-math/src/client/: calculator.ts  math.ts
hello-solana/: README.md  package-lock.json  package.json
hello-solana/src/client/: main.ts
hello-solana/src/program/: Cargo.toml
hello-solana/src/program/src/: lib.rs
nfts/mint-nft/: Anchor.toml
nfts/mint-nft-raw/mint/src/: lib.rs
nfts/sell-nft/: Anchor.toml  build.sh  package-lock.json  terminal.md
nfts/sell-nft/programs/mint-nft/src/: lib.rs
nfts/sell-nft/tests/: test-mint.ts
persisting-data/: README.md  package.json  result.md
persisting-data/scripts/: cicd.sh
persisting-data/src/client/: math.ts
persisting-data/src/square/: Cargo.toml
persisting-data/src/square/src/: lib.rs
persisting-data/src/sum/: Cargo.toml
persisting-data/src/sum/src/: lib.rs
transfer-sol/: log.md  package.json
transfer-sol/_dist/program/: program-keypair.json
transfer-sol/client/: main.ts
