[package]
name = "sum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.17.10"
ahash = "=0.8.6"
borsh = "0.9.1"

[dev-dependencies]
solana-program-test = "1.17.10"
solana-sdk = "1.17.10"

# configuration to build .so file to run on solana 
[lib]
crate-type = ["cdylib", "lib"]